<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weezlabs.infra_strike.activities.CreateGameActivity"
    tools:showIn="@layout/activity_create_game">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/game_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/game_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_game_name"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_name"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/game_types_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game Type"/>
        <RadioButton
            android:id="@+id/death_match_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death_match"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/team_death_match_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_death_match"/>
        <RadioButton
            android:id="@+id/check_point_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_point_defence"/>
    </RadioGroup>

    <TextView
        android:id="@+id/respawn_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Respawn Time"/>

    <Spinner
        android:id="@+id/respawn_time_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ir_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/ir_code" />
</LinearLayout>
